Changes Done in index.html

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
             <li class="vol">
                 <span class=" vol-i number">10</span>
-                <span class=" vol-i name">Riya</span>
+                <span class=" vol-i name">Surya</span>
                 <span class=" vol-i location">Tirunantapuram, Kerala<br>India</span>
                 <span class=" vol-i blood group">B+<i class="fa fa-tint" aria-hidden="true"></i>
                 </span>
