--- a/index.html
+++ b/index.html
@@ -264,13 +264,11 @@
                 save lives.</p>
             <div class="socials">
                 <ul class="sci">
-                    <li><a href="https://www.facebook.com/givebloodnhs/" target="_blank"><i
+                    <li><a href="https://blood-buddy.netlify.app/" target="_blank"><i
                                 class="fab fa-facebook"></i></a>
                     </li>
-                    <li><a href="https://www.instagram.com/indiablooddonation/?hl=en" target="_blank"><i
+                    <li><a href="https://www.instagram.com/irfan__mohummad/?igsh=MWdqbWRsZWJ0N2VlMw%3D%3D" target="_blank"><i
                                 class="fab fa-instagram"></i></a></li>
-                    <li><a href="http://nbtc.naco.gov.in/" target="_blank"><i class="fas fa-globe"></i></a>
-                    </li>
                 </ul>
             </div>
         </div>
